package com.cs2340.interstellarmerchant.model.player.game_config;

/**
 * enum to represent the difficulty of the game
 */
public enum Difficulty {
    Beginner,
    Easy,
    Normal,
    Hard,
    Impossible
}
