@startuml

title __GAME_CONFIG's Class Diagram__\n

  package com.cs2340.interstellarmerchant {
    package com.cs2340.interstellarmerchant.model.player {
      package com.cs2340.interstellarmerchant.model.player.game_config {
        enum Difficulty {
          Beginner
          Easy
          Normal
          Hard
          Impossible
        }
      }
    }
  }
  

  package com.cs2340.interstellarmerchant {
    package com.cs2340.interstellarmerchant.model.player {
      package com.cs2340.interstellarmerchant.model.player.game_config {
        class GameConfig {
            + GameConfig()
            + getGameDifficulty()
            + setGameDifficulty()
        }
      }
    }
  }
  

  GameConfig -up-|> Serializable
  GameConfig o-- Difficulty : gameDifficulty


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
